# preprocessor-microservice

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  docker-image.yml
app/: main.py
app/api/: router.py  router_mock.py  router_stub.py
app/core/: config.py  extraction.py  preprocessor.py  resampling.py
app/data_mocks/: extracted_features.csv
app/schemas/: data_models.py  exceptions.py
app/util/: background_removal.py  csv_utils.py  cube_slicer.py  validation.py  verification.py
app/util/model/: best.pt  best_small.pt
tests/: conftest.py
tests/api/: test_router.py
tests/core/: test_extraction.py  test_preprocessor.py  test_resampling.py
tests/util/: test_background_removal.py  test_csv_utils.py  test_cube_slicer.py  test_validation.py
