[project]
name = "preprocessor-service"
version = "0.0.1"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "spectral>=0.24",
    "pytest>=8.3.5",
    "pandas>=2.2.3",
    "httpx>=0.28.1",
    "flake8>=7.2.0",
    "scipy>=1.15.3"
]

[tool.pytest.ini_options]
python_files = "test_*.py *_test.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = [".", "app"]

[build-system]
requires=["setuptools"]
build-backend = "setuptools.build_meta"